# rata-pi

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HOW_TO_UPDATE.md  LICENSE  PLAN_V2.13.md  PLAN_V2.md  PLAN_V4.md  README.md  pi-doc.md  plan_approval_flow.md  plan_avancement.md  plan_avancement_v2.13.md  plan_avancement_v2.md  track_v3_progression.md  track_v4_progression.md
.github/workflows/: ci.yml  release.yml
Formula/: rata-pi.rb
docs/: ANNOUNCEMENT.md  FEATURES.md  PITCH.md  USER_GUIDE.md
plans/: PLAN.md  PLAN_V3.md  PLAN_V4.md  code_review.md  code_ux_review.md  plan_avancement_v2.13.md  plan_avancement_v2.md  plan_mode_review.md  track_v4_progression.md
src/: app.rs  cli.rs  clipboard.rs  composer.rs  config.rs  files.rs  git.rs  history.rs  interview.rs  log.rs  main.rs  notify.rs  plan.rs  templates.rs  term_caps.rs
src/anim/: ease.rs  mod.rs
src/app/: cards.rs  draw.rs  events.rs  helpers.rs  input.rs  mod.rs  modal_keys.rs  visuals.rs
src/app/modals/: bodies.rs  interview.rs  mod.rs  settings.rs
src/rpc/: client.rs  codec.rs  commands.rs  events.rs  mod.rs  process.rs  types.rs
src/theme/: builtin.rs  mod.rs
src/ui/: ansi.rs  cards.rs  commands.rs  diff.rs  export.rs  ext_ui.rs  markdown.rs  mod.rs  modal.rs  syntax.rs  transcript.rs
