[package]
name = "rata-pi"
version = "0.1.0"
description = "A Ratatui TUI for the Pi coding agent over JSONL RPC"
authors = ["olivvein <parcouru_epoque.9b@icloud.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"

tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "sync",
    "time",
    "signal",
] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

clap = { version = "4", features = ["derive"] }
directories = "6"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
