[package]
name = "rata-pi"
version = "0.1.0"
description = "A Ratatui TUI for the Pi coding agent over JSONL RPC"
authors = ["olivvein <parcouru_epoque.9b@icloud.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }

tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "sync",
    "time",
    "signal",
] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

clap = { version = "4", features = ["derive"] }
directories = "6"

# Clipboard (arboard primary, OSC 52 fallback for SSH).
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
base64 = "0.22"

# Fuzzy file finder.
fuzzy-matcher = "0.3"
ignore = "0.4"

# Rendering
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
