[package]
name = "rata-pi"
version = "1.0.0"
description = "A Ratatui TUI for the Pi coding agent over JSONL RPC"
authors = ["olivvein <parcouru_epoque.9b@icloud.com>"]
license = "MIT"
edition = "2024"
readme = "README.md"
repository = "https://github.com/TheSamLePirate/rata-pi"
homepage = "https://github.com/TheSamLePirate/rata-pi"
keywords = ["tui", "ratatui", "pi", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }

tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "sync",
    "time",
    "signal",
] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

clap = { version = "4", features = ["derive"] }
directories = "6"

# Clipboard (arboard primary, OSC 52 fallback for SSH).
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
base64 = "0.22"

# Fuzzy file finder.
fuzzy-matcher = "0.3"
ignore = "0.4"

# Rendering
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
] }

# Native desktop notifications — opt-in via the `notify` feature. OSC 777
# emission is always available and does not require this dep.
notify-rust = { version = "4", optional = true }

[features]
default = []
# Enable native desktop notifications (DBus / NSUserNotification / WinToast).
# OSC 777 works without this feature.
notify = ["dep:notify-rust"]

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
#
# V2.11.3 · flipped opt-level from "s" (size-optimized) to 3 (speed).
# A TUI has no size constraint — the previous 4.2 MB release binary is
# already well under anything that matters. The markdown/syntect work on
# the draw path + the per-entry visuals cache benefit measurably from
# full inlining.
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
